wrong background color fix

--- a/frontend-mentor/3-column-preview-card-component/styles/style.scss
+++ b/frontend-mentor/3-column-preview-card-component/styles/style.scss
@@ -22,7 +22,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background-color: $very-light-gray;
   padding: 3rem;
   min-height: 100vh;
 }
